Centered logo and added correct charset encoding

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Studio AF</title>
 </head>
 <body>
-  <a href="https://www.facebook.com/StudioAFLund/" title="Besök Studio AF på Facebook för mer info"><img src="https://scontent.xx.fbcdn.net/hphotos-xft1/t31.0-8/11224076_1655163058090194_1189439637780755790_o.png"></img></a>
+  <a href="https://www.facebook.com/StudioAFLund/" title="Besök Studio AF på Facebook för mer info"><img class="logo" src="https://scontent.xx.fbcdn.net/hphotos-xft1/t31.0-8/11224076_1655163058090194_1189439637780755790_o.png"></img></a>
+  <style type="text/css">
+    body {
+      text-align: center;
+    }
+    .logo {
+      max-width: 50%;
+    }
+  </style>
 </body>
 </html>
